# shellkeep

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CLA.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  THIRD-PARTY-LICENSES  TODO.md  build.rs  meson.build  meson_options.txt  run_remote_tests.sh
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-rust.yml  ci.yml  codeql.yml  lint.yml  package.yml  release-rust.yml  release.yml
LICENSES/: GPL-3.0-or-later.txt
build-test/: CMakeCache.txt
crates/iced_term/: .cargo_vcs_info.json  Cargo.toml
crates/iced_term/src/: actions.rs  backend.rs  bindings.rs  font.rs  lib.rs  settings.rs  terminal.rs  theme.rs  view.rs
data/: org.shellkeep.ShellKeep.appdata.xml  shellkeep-autostart.desktop  shellkeep.desktop
debian/: changelog  control  copyright  rules  shellkeep.install  shellkeep.manpages
docs/: ARCHITECTURE.md  STATE-FORMAT.md  demo.webm
docs/good-first-issues/: add-terminal-theme.md  add-test.md  add-translation.md  improve-docs.md  improve-error-message.md
include/shellkeep/: sk_compat.h  sk_config.h  sk_connect.h  sk_i18n.h  sk_log.h  sk_reconnect.h  sk_session.h  sk_ssh.h  sk_state.h  sk_terminal.h  sk_terminal_qt.h  sk_types.h  sk_ui.h  sk_ui_bridge.h  sk_ui_qt.h
macos/: Info.plist.in
man/: shellkeep.1
po/: LINGUAS  POTFILES.in  meson.build  pt_BR.po  shellkeep.pot
scripts/: build-appimage.sh  capture-screenshots.sh  generate-icons.sh  install-autostart.sh  install-hooks.sh  record-demo.sh  setup-dev.sh  shellkeep-wrapper.sh  update-artifacts.sh  valgrind-full-lifecycle.sh  valgrind-scenario.sh
src/: cli.rs  config.rs  crash.rs  error.rs  i18n.rs  instance.rs  lib.rs  main.c  main.rs  main_qt.cpp  network.rs  sk_types.c  theme.rs  tray.rs
src/app/: message.rs  mod.rs  session.rs  state_watcher.rs  tab.rs  update.rs
src/config/: sk_config.c  sk_config_client_id.c  sk_config_hotreload.c  sk_config_theme.c
src/connect/: sk_connect.c  sk_ui_bridge.c
src/log/: meson.build  sk_crash.c  sk_log.c  sk_log_stub.c
src/session/: meson.build  sk_lock.c  sk_session_history.c  sk_session_internal.h  sk_session_manager.c  sk_session_ops.c  sk_session_reconcile.c  sk_tmux_control.c  sk_tmux_detect.c
src/ssh/: connection.rs  errors.rs  known_hosts.rs  lock.rs  manager.rs  meson.build  mod.rs  proxy.rs  reconnect.c  sftp.rs  sk_ssh_auth.c  sk_ssh_channel.c  sk_ssh_connection.c  sk_ssh_crypto.c  sk_ssh_hostkey.c  sk_ssh_internal.h  sk_ssh_keepalive.c  sk_ssh_sftp.c  sk_ssh_shell_fallback.c  ssh_config.rs  tmux.rs  validate.rs
src/state/: client_id.rs  environment.rs  history.rs  merge.rs  meson.build  mod.rs  permissions.rs  recent.rs  server.rs  sk_history.c  sk_paths.c  sk_permissions.c  sk_recent.c  sk_state.c  sk_state_debounce.c  state_file.rs  workspace.rs
src/terminal/: meson.build  sk_terminal_dead.c  sk_terminal_internal.h  sk_terminal_search.c  sk_terminal_tab.c  sk_terminal_theme.c
src/terminal_qt/: SkTerminalDead.cpp  SkTerminalDead.h  SkTerminalSearch.cpp  SkTerminalSearch.h  SkTerminalTheme.cpp  SkTerminalTheme.h  SkTerminalWidget.cpp  SkTerminalWidget.h
src/ui/: meson.build  sk_app_window.c  sk_conn_feedback.c  sk_dialogs.c  sk_toast.c  sk_welcome.c  tray.c
src/ui_qt/: SkConnFeedback.cpp  SkConnFeedback.h  SkConnectFlow.cpp  SkConnectFlow.h  SkDialogs.cpp  SkDialogs.h  SkMainWindow.cpp  SkMainWindow.h  SkStyleSheet.cpp  SkStyleSheet.h  SkToast.cpp  SkToast.h  SkTrayIcon.cpp  SkTrayIcon.h  SkUiBridgeQt.cpp  SkUiBridgeQt.h  SkWelcomeWidget.cpp  SkWelcomeWidget.h
tests/: e2e_features.rs  e2e_russh.rs  e2e_state.rs  e2e_tmux.rs  lsan.supp  run_remote_e2e.sh  valgrind.supp
tests/bench/: bench_common.sh  run_all_benchmarks.sh  slo01_keystroke_latency.sh  slo02_cpu_tmux_cc.sh  slo03_ram_20_tabs.sh  slo04_gtk_loop_blocking.sh  slo05_restore_first_window.sh  slo06_restore_all_tabs.sh  slo07_sftp_sync_debounce.sh  slo08_reconnection.sh  slo09_concurrent_ssh.sh  slo10_jsonl_rotation.sh  slo11_dead_session_restore.sh  slo12_tray_menu.sh  slo13_startup_window.sh  slo14_startup_interactive.sh  slo15_cpu_idle.sh  slo_full_benchmark.sh
tests/chaos/: Dockerfile  chaos_helpers.sh  run_all.sh  test_01_high_latency.sh  test_02_packet_loss_10.sh  test_03_packet_loss_30.sh  test_04_abrupt_disconnect.sh  test_05_disconnect_30s.sh  test_06_disconnect_5min.sh  test_07_bandwidth_56k.sh  test_08_ip_change.sh  test_09_gradual_latency.sh  test_10_intermittent.sh
tests/distro/: Dockerfile.debian12  Dockerfile.ubuntu2204  Dockerfile.ubuntu2404  test_distro.sh
tests/e2e/: e2e_helpers.sh  run_all.sh  test_e2e_conflict.sh  test_e2e_dead_session.sh  test_e2e_environments.sh  test_e2e_first_use.sh  test_e2e_multi_client.sh  test_e2e_reconnection.sh
tests/edge/: test_edge_limits.c  test_edge_signals.c  test_edge_ssh.c  test_edge_state.c  test_edge_tmux.c
tests/first-run/: Dockerfile.no-tmux  Dockerfile.tmux2  fr_helpers.sh  run_all.sh  test_scenario_1.sh  test_scenario_2.sh  test_scenario_3.sh  test_scenario_4.sh  (+2 more)
tests/fuzz/: build_fuzz.sh  fuzz_config_load.c  fuzz_history_read.c  fuzz_ssh_config_parse.c  fuzz_state_load.c  fuzz_tmux_control_parse.c  meson.build  run_all_fuzz.sh
tests/fuzz/corpus/config/: extreme_values.ini  minimal.ini  not_ini.ini  unknown_keys.ini  valid.ini
tests/fuzz/corpus/history/: empty_lines.jsonl  huge_text.jsonl  invalid_types.jsonl  raw_hex.jsonl  truncated.jsonl  valid.jsonl
tests/fuzz/corpus/ssh_config/: adversarial.conf  long_values.conf  proxy_jump.conf  valid.conf
tests/fuzz/corpus/state/: deep_nesting.json  huge_version.json  negative_version.json  null_fields.json  unicode_fields.json  valid_full.json  valid_minimal.json  wrong_types.json
tests/fuzz/corpus/tmux_control/: begin.txt  end.txt  error.txt  exit.txt  exit_reason.txt  multi_line.txt  output.txt  session_changed.txt  session_name.txt  unknown_notification.txt  version_3_3a.txt  version_3_4.txt
windows/: shellkeep.rc
(+66 files in other folders)
