# SPDX-FileCopyrightText: 2026 shellkeep contributors
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "shellkeep"
version = "0.3.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "SSH terminal manager — persistent sessions that survive everything"
repository = "https://github.com/shellkeep/shellkeep"
rust-version = "1.88"

[dependencies]
# Terminal emulator widget (forked for shellkeep customizations)
iced_term = { path = "crates/iced_term" }
iced = { version = "0.14", features = ["tokio"] }
iced_runtime = "0.14"

# SSH (pure Rust, async)
russh = "0.58"
russh-keys = "0.48"
ssh-key = { version = "0.6", features = ["ed25519", "rsa", "encryption"] }
async-trait = "0.1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"

# XDG paths
dirs = "6"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Platform utilities
whoami = "1"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Random number generation (jitter)
rand = "0.9"

# Date/time formatting
chrono = "0.4"

# File watching (config hot reload)
notify = "7"

# System tray (optional — requires GTK3/libappindicator on Linux)
tray-icon = { version = "0.22", optional = true }
muda = { version = "0.17", optional = true }
russh-sftp = "2"
regex = "1.12.3"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
gtk = { version = "0.18", optional = true }

[features]
tray = ["tray-icon", "muda", "gtk"]

[dev-dependencies]
tempfile = "3"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"

[lints]
workspace = true

[profile.release]
lto = "thin"
strip = true
