# SPDX-FileCopyrightText: 2026 shellkeep contributors
# SPDX-License-Identifier: GPL-3.0-or-later

option('tests',
  type: 'boolean',
  value: false,
  description: 'Build and run unit tests (requires cmocka)',
)

option('journald',
  type: 'feature',
  value: 'auto',
  description: 'Enable journald logging via libsystemd',
)

option('fuzz',
  type: 'boolean',
  value: false,
  description: 'Build fuzz targets (requires clang with libFuzzer)',
)
