# Forked from https://github.com/Harzu/iced_term (MIT) with shellkeep modifications

[package]
edition = "2024"
rust-version = "1.88"
name = "iced_term"
version = "0.8.0"
authors = ["Ilya Shvyryalkin <ilyashvy@gmail.com>"]
description = "Terminal emulator widget for iced, forked from iced_term with SSH backend support"
readme = "README.md"
categories = ["gui"]
license = "MIT"
repository = "https://github.com/Harzu/iced_term"

[lib]
name = "iced_term"
path = "src/lib.rs"

[dependencies.alacritty_terminal]
version = "0.25.1"

[dependencies.iced]
version = "0.14.0"
features = [
    "canvas",
    "lazy",
    "advanced",
]

[dependencies.iced_core]
version = "0.14.0"

[dependencies.iced_graphics]
version = "0.14.0"
default-features = false

[dependencies.open]
version = "5.3.3"

[dependencies.tokio]
version = "1.50.0"
features = ["full"]
